package proto_dbproxy;

message DBError
{
    required uint32 identifier    = 1;
    required int32 error_code     = 2;
    optional string what          = 3;
}

message ProxyError
{
    enum ErrorCode
    {
        kDisconnect               = 1;
        kNotConnected             = 2;
        kInvalidProtocol          = 3;
        kInvalidAction            = 4;
        kNotFoundDatabase         = 5;
        kResourceInsufficiency    = 6;
    }
    
    required ErrorCode error_code = 1;
    optional uint32 identifier    = 2;
}

message Response
{
    required uint32 identifier    = 1;
    optional string result        = 2;
}