package proto_db;

message Error
{
    required int32 number = 1;
    required int32 error_code = 2;
    optional string msg = 3;
}

message Response
{
    required int32 number = 1;
    optional string result = 2;
}